Add note field to income entries

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="income_type_label">Typ</string>
     <string name="income_type_one_time">Einmalig</string>
     <string name="income_type_recurring">Wiederkehrend</string>
+    <string name="income_note_label">Text / Notiz</string>
 </resources>
